# installd

./: .gitignore  Cargo.toml
install-helper/: Cargo.toml
install-helper/src/: dbus.rs  install.rs  main.rs
installd/: Cargo.toml
installd/src/: dbus.rs  flatpak.rs  install.rs  jobs.rs  main.rs  module_permissions.rs  signature.rs  transaction.rs  trash.rs
permission-helper/: Cargo.toml
permission-helper/src/: dbus.rs  main.rs  profile.rs
