[package]
name = "lunaris-install-helper"
version = "0.1.0"
edition = "2021"
description = "Root D-Bus service for privileged Lunaris install operations"

[[bin]]
name = "lunaris-install-helper"
path = "src/main.rs"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
