[package]
name = "lunaris-installd"
version = "0.1.0"
edition = "2021"
description = "User-level install daemon for Lunaris apps and modules"

[[bin]]
name = "lunaris-installd"
path = "src/main.rs"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
zstd = "0.13"
dirs = "6"
libc = "0.2"
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
