[package]
name = "lunaris-permission-helper"
version = "0.1.0"
edition = "2021"
description = "Root D-Bus service for writing Lunaris permission profiles"

[[bin]]
name = "lunaris-permission-helper"
path = "src/main.rs"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
